--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,38 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+---
 
-Things you may want to cover:
+##SPECTRM
+---
 
-* Ruby version
+Spectrm is an interactive experience using the Web Audio API and Three.js to create shapes in your browser and makes them respond to a song or the sound coming from the microphone.
 
-* System dependencies
+You can have a look at it here: http://spectrm.herokuapp.com
 
-* Configuration
+####Functionalities: 
 
-* Database creation
+* You have the choice to either use the song preloaded or activate the microphone to see the shape move.
+* The control panel on the side allows you to make the shape bigger or smaller as you like. If you wish to save your settings, you need to sign up.
+* At the moment, 3 different shapes are available.
 
-* Database initialization
+####Frameworks and libraries:
 
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+This exprience uses Javascript, jQuery, the Web Audio API and Three.js.
+The back-end is managed by Rails.
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+####TODO:
+
+* Add more shapes
+* Add some testing
+* Add functionalities in control panel.
+* Use the Soundcloud API to allow users to upload whichever song they like.
+
+
+---
+
+####Special thanks:
+
+Special thanks to Mathilda Thompson & Joel Turnbull for their help!
+
+
